Fix off-center menu text

--- a/theme/nova/style.css
+++ b/theme/nova/style.css
@@ -132,13 +132,13 @@ div:after { content: ""; display: block; height: 0; clear: both; }
 		#home-btn { display: block; float: left; width: 250px; }
 		#home-btn ul { list-style: none outside none; margin: 0; }
 		#home-btn ul li { background: url(images/home-btn-normal.png) no-repeat; display: block; float: left; height: 30px; position: relative; text-align: center; width: 250px; }
-		#home-btn ul li > a { color:#000; display:block; float:left; font:normal 16px/20px "Gentium Basic", serif; height:20px; line-height:20px; padding:5px; position:relative; text-align:center; text-decoration:none; width:inherit }
+		#home-btn ul li > a { color:#000; display:block; float:left; font:normal 16px/20px "Gentium Basic", serif; height:20px; line-height:20px; padding:5px 0px 5px; position:relative; text-align:center; text-decoration:none; width:inherit }
 		#home-btn ul li:hover > a { background:url(images/home-btn-hover.png) no-repeat;}
 	/* Access */
 		#access{display:block;float:right;width:750px}
 		#access ul{list-style:none;margin:0}
 		#access ul li { background: url("images/access-li.png") no-repeat 0 0; display: block; float: left; height: 30px; position: relative; text-align: center; width: 150px; }
-		#access ul li > a { color:#fff; display:block; float:left; font:normal 16px/20px "Gentium Basic", serif; height:20px; line-height:20px; padding:5px; position:relative; text-align:center; text-decoration:none; width:inherit }
+		#access ul li > a { color:#fff; display:block; float:left; font:normal 16px/20px "Gentium Basic", serif; height:20px; line-height:20px; padding:5px 0px 5px; position:relative; text-align:center; text-decoration:none; width:inherit }
 		#access ul li:hover > a { background:url(images/access-li.png) no-repeat -320px 0; color:#000 }
 		#access ul li:hover > ul { display: inline-block } /*Display the child menu on parent hover*/
 		#access ul ul { background:none; display:none; float:left; position:relative; top:0; width:150px; z-index:998 }
